--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,5 @@
-/spare/local/jhuggett/.tmux.conf
+set-option -g history-limit 100000
+set-option -g mode-keys vi
+set-option -g c0-change-interval 30
+set-option -g c0-change-trigger 8
+
